--- a/public/css/main.css
+++ b/public/css/main.css
@@ -287,8 +287,9 @@ img + .page-galleries {
   position: absolute;
   z-index: 10;
   top: 420px;
-  left: 50%;
-  transform: translateX(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 @media only screen and (min-width: 768px) {
   .dots {
@@ -300,7 +301,7 @@ img + .page-galleries {
   cursor: pointer;
   background-color: #fff;
   border-radius: 50%;
-  margin-right: 8px;
+  margin-right: 12px;
   display: inline-block;
   width: 11px;
   height: 11px;
