Fix button appearance

--- a/public/css/sass/_variables.sass
+++ b/public/css/sass/_variables.sass
@@ -31,6 +31,8 @@ $sans: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif
   font-size: 28px
   color: #fff
   letter-spacing: 0.05em
+  border-radius: 0
+  -webkit-appearance: none
   &[disabled='disabled']
     background-color: rgba($black, 0.4)
     cursor: not-allowed
