--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -83,7 +83,7 @@ nav
   display: none
   width: 100%
   height: 100%
-  padding-top: 20px
+  padding-top: 60px
   background: rgba(black, 0.75)
   position: fixed
   top: 0
@@ -125,7 +125,7 @@ nav
     @include breakpoint($tablet)
       display: none
   & > li
-    margin-top: 40px
+    margin-bottom: 30px
     text-transform: uppercase
     @include breakpoint($tablet)
       margin-top: 0
