--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,6 +78,8 @@
   font-size: 28px;
   color: #fff;
   letter-spacing: 0.05em;
+  border-radius: 0;
+  -webkit-appearance: none;
 }
 .shipping-confirmation [disabled='disabled'].shipping-confirmation-confirm, .page-content .add-to-cart form input[disabled='disabled'][type=submit], #products .product-overview ul li .buy-reveal [disabled='disabled'].buy {
   background-color: rgba(51, 51, 51, 0.4);
@@ -183,17 +185,29 @@
   }
 }
 
+.page-galleries {
+  display: flex;
+  justify-content: center;
+}
 img + .page-galleries {
   padding-top: 25px;
   border-top: 1px solid #B24629;
 }
 .page-galleries [data-gallery] {
   cursor: pointer;
+  text-align: left;
+  margin: 0 5%;
 }
 .page-galleries [data-gallery] .gallery-description {
   display: inline-block;
-  vertical-align: middle;
-  width: 200px;
+  width: 170px;
+  vertical-align: top;
+}
+@media only screen and (min-width: 768px) {
+  .page-galleries [data-gallery] .gallery-description {
+    width: 200px;
+    vertical-align: middle;
+  }
 }
 .page-galleries [data-gallery] .gallery-description h4 {
   font-size: 24px;
@@ -209,8 +223,13 @@ img + .page-galleries {
   vertical-align: middle;
   vertical-align: middle;
   display: inline-block;
-  width: 110px;
+  width: 90px;
   margin-right: 15px;
+}
+@media only screen and (min-width: 768px) {
+  .page-galleries [data-gallery] img {
+    width: 110px;
+  }
 }
 
 #gallery h2 {
@@ -237,15 +256,13 @@ img + .page-galleries {
   }
 }
 #gallery .page-galleries {
-  display: flex;
   flex-flow: row wrap;
   width: calc(100% + 50px);
   margin-left: -25px;
-  justify-content: center;
-  overflow: hidden;
-  border-top: none;
   margin-top: 25px;
   padding-top: 0;
+  overflow: hidden;
+  border-top: none;
 }
 #gallery .page-galleries [data-gallery] {
   width: 300px;
@@ -633,10 +650,16 @@ main#content .container {
   }
 }
 .page-content .page-image > img {
-  width: 300px;
+  max-width: 100%;
   margin: 0 auto;
   margin-bottom: 25px;
   display: block;
+}
+@media only screen and (min-width: 768px) {
+  .page-content .page-image > img {
+    width: 300px;
+    max-width: inherit;
+  }
 }
 @media only screen and (min-width: 1040px) {
   .page-content .page-image > img {
@@ -865,8 +888,13 @@ main#content .container {
   height: 40px;
   font-size: 22px;
   line-height: 42px;
-  margin-left: 40px;
+  margin-left: 15px;
   pointer-events: none;
+}
+@media only screen and (min-width: 768px) {
+  #products .product-overview ul li .buy-reveal .buy {
+    margin-left: 40px;
+  }
 }
 #products .product-overview ul li .buy-reveal .faux-buy {
   transition: all 0.1s;
@@ -1044,7 +1072,7 @@ main#content .container {
   width: 100px;
   margin: 0 auto;
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
 @media only screen and (min-width: 768px) {
   #awards .awards-list li .right-image img {
@@ -1066,6 +1094,7 @@ main#content .container {
   background-size: 348px auto;
   right: -80px;
   display: none;
+  z-index: -1;
 }
 @media only screen and (min-width: 1040px) {
   #awards .awards-list li .right-image:before {
@@ -1529,6 +1558,7 @@ main#content .container {
 }
 #contact textarea {
   width: 340px;
+  max-width: calc(100% - 12px);
   height: 140px;
   background-color: #ffffff;
   border: 1px solid #cccccc;
