--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -2990,7 +2990,7 @@ nav {
   display: none;
   width: 100%;
   height: 100%;
-  padding-top: 20px;
+  padding-top: 60px;
   background: rgba(0, 0, 0, 0.75);
   position: fixed;
   top: 0;
@@ -3044,7 +3044,7 @@ nav {
   }
 }
 .navigation > li {
-  margin-top: 40px;
+  margin-bottom: 30px;
   text-transform: uppercase;
 }
 @media only screen and (min-width: 768px) {
