--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -460,6 +460,10 @@
       text-transform: uppercase
       font-size: 30px
       line-height: 68px
+      padding-right: 50px
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
       &:after
         content: ""
         width: 25px
