Changing number input field appearance

--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -516,9 +516,10 @@
         border-radius: 4px
         padding: 2px 4px
         width: 40px
+        -webkit-appearance: none
         @include breakpoint($tablet)
           width: 60px
-          font-size: 22px
+          font-size: 20px
       input[type=submit]
         @extend %button
         height: 42px
