--- a/public/css/main.css
+++ b/public/css/main.css
@@ -778,11 +778,12 @@ main#content .container {
   border-radius: 4px;
   padding: 2px 4px;
   width: 40px;
+  -webkit-appearance: none;
 }
 @media only screen and (min-width: 768px) {
   .page-content .add-to-cart form input[type=number] {
     width: 60px;
-    font-size: 22px;
+    font-size: 20px;
   }
 }
 .page-content .add-to-cart form input[type=submit] {
