Style no items warning message.

--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -60,7 +60,7 @@
       {% endif %}
 
       {% if not cart.lineItems|length %}
-      <p>You have no items in your cart, add some on the <a href="/products">products page</a>.</p>
+        <p class="no-items">{{ 'No Items' | t }} <a href="/products">{{ 'Products page' | t }}</a>.</p>
       {% endif %}
 
     </div>
