--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -358,6 +358,7 @@
 
 .container
   margin: 0 20px
+  min-height: 35vh
   @include breakpoint($tablet)
     margin: 0 40px
   @include breakpoint($desktop)
