--- a/public/css/sass/store.sass
+++ b/public/css/sass/store.sass
@@ -625,6 +625,9 @@ img.product
 .hidden
   display: none
 
+.no-items
+  text-align: center
+
 .product.row
   border-bottom: 1px solid #fafafa
   margin-bottom: 2.5rem
