--- a/public/css/main.css
+++ b/public/css/main.css
@@ -549,6 +549,7 @@ img + .page-galleries {
 
 .container {
   margin: 0 20px;
+  min-height: 35vh;
 }
 @media only screen and (min-width: 768px) {
   .container {
