--- a/craft/templates/commerce/checkout/shipping.html
+++ b/craft/templates/commerce/checkout/shipping.html
@@ -5,29 +5,18 @@
   <div class="row">
 
 
-    <div class="one-third column">
+    {% if not craft.commerce.availableShippingMethods|length %}
+    <div class="two-thirds column">
       <div class="address-card address-reminder">
         <p>{{ "Shipping Reminder" | t }}</p>
         <p>{{ "Shipping Reminder 2" | t }}</p>
         {% include 'partials/shipping_locations' %}
       </div>
     </div>
+    {% endif %}
 
-
-    <div class="one-third column">
-
-      {#
-      Choosing a shipping method.
-      Now that we know the cart's address, we need to show all available shipping methods. Only those that match
-      a shipping method's rule are compatible with the shipping address. `craft.commerce.shippingMethods` only returns
-      methods available to the user. If you require shipping and no methods are avaialable, create a catch all rule
-      in a method that matches all addresses.
-      #}
-
-      {% if not craft.commerce.availableShippingMethods|length %}
-      <p>No shipping methods available.<p><p> <a class="button button-primary" href="/commerce/checkout/payment">Continue to payment</a></p>
-      {% endif %}
-
+    {% if craft.commerce.availableShippingMethods|length %}
+    <div class="two-thirds column">
       {% if craft.commerce.availableShippingMethods|length %}
       <form method="POST">
         <input type="hidden" name="action" value="commerce/cart/updateCart">
@@ -56,6 +45,7 @@
       {% endif %}
 
     </div>
+    {% endif %}
 
     <div class="one-third column">
       <div class="address-card">
