--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -79,6 +79,7 @@
 
 .page-galleries
   display: flex
+  flex-flow: row wrap
   justify-content: center
   img + &
     padding-top: 25px
@@ -86,7 +87,10 @@
   [data-gallery]
     cursor: pointer
     text-align: left
-    margin: 0 5%
+    margin: 0 5% 10px 5%
+    @include breakpoint($tablet)
+      margin: 0
+      margin-bottom: 25px
     .gallery-description
       display: inline-block
       width: 170px
