--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -246,10 +246,17 @@ footer
   text-align: center
   text-transform: uppercase
   font-size: 13px
+  border-top: 1px solid $copper
+  margin: 0 20px
+  padding-top: 20px
+  @include breakpoint($tablet)
+    margin: 0 40px
   @include breakpoint($desktop)
+    border-top: none
     font-size: 14px
     line-height: 14px
-    padding-top: 40px
+    padding-top: 60px
+    margin: 0
     margin-bottom: 50px
   p
     margin-bottom: 10px
