--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -28,7 +28,9 @@ header
       margin: 0 auto
       position: relative
   .header-body
-    height: $header-short
+    height: $header-short - 40
+    @include breakpoint($tablet)
+      height: $header-short
 
 .mobile-controls
   position: absolute
