--- a/public/css/main.css
+++ b/public/css/main.css
@@ -282,6 +282,10 @@ img + .page-galleries {
   height: 169px;
 }
 
+.gallery iframe {
+  max-width: 100%;
+  max-height: 100%;
+}
 .gallery img {
   max-width: 100%;
   max-height: 100%;
