--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -151,7 +151,9 @@
         height: 169px
 
 .gallery
-
+  iframe
+    max-width: 100%
+    max-height: 100%
   img
     max-width: 100%
     max-height: 100%
