--- a/public/css/main.css
+++ b/public/css/main.css
@@ -93,8 +93,26 @@
   position: relative;
   z-index: 0;
 }
-#home .banners .banner .banner-cta {
-  bottom: 165px;
+#home .banners .banner .banner-headline-container {
+  height: 93%;
+}
+#home .banners .banner .banner-headline {
+  font-size: 32px;
+  line-height: 42px;
+  padding: 0 20px;
+}
+@media only screen and (min-width: 768px) {
+  #home .banners .banner .banner-headline {
+    padding: 0 100px;
+    font-size: 36px;
+    line-height: 58px;
+  }
+}
+@media only screen and (min-width: 1040px) {
+  #home .banners .banner .banner-headline {
+    font-size: 42px;
+    line-height: 58px;
+  }
 }
 #commerce .banners {
   display: none;
