--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -7,8 +7,20 @@
   position: relative
   z-index: 0
   #home &
-    .banner .banner-cta
-      bottom: 165px
+    .banner
+      .banner-headline-container
+        height: 93%
+      .banner-headline
+        font-size: 32px
+        line-height: 42px
+        padding: 0 20px
+        @include breakpoint($tablet)
+          padding: 0 100px
+          font-size: 36px
+          line-height: 58px
+        @include breakpoint($desktop)
+          font-size: 42px
+          line-height: 58px
   #commerce &
     display: none
   &.banner_slideshow
