--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1459,6 +1459,7 @@ main#content .container {
 #contact iframe {
   max-width: 100%;
   max-height: 300px;
+  margin-bottom: 25px;
 }
 @media only screen and (min-width: 768px) {
   #contact iframe {
