--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -1039,6 +1039,7 @@
   iframe
     max-width: 100%
     max-height: 300px
+    margin-bottom: 25px
     @include breakpoint($tablet)
       max-height: inherit
   .prefer_email
