--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 @media all {
-  /* line 55, sass/_mixins.scss */
   .featherlight {
     display: none;
     position: fixed;
@@ -15,11 +14,9 @@
     background: #333;
     background: transparent;
   }
-  /* line 68, sass/_mixins.scss */
   .featherlight:last-of-type {
     background: rgba(0, 0, 0, 0.8);
   }
-  /* line 71, sass/_mixins.scss */
   .featherlight:before {
     content: '';
     display: inline-block;
@@ -27,48 +24,44 @@
     vertical-align: middle;
     margin-right: -0.25em;
   }
-  /* line 78, sass/_mixins.scss */
   .featherlight .featherlight-content {
     text-align: left;
     vertical-align: middle;
-    display: inline-block;
-    overflow: auto;
+    display: inline-flex;
+    overflow: hidden;
     min-width: 30%;
     margin-left: 5%;
     margin-right: 5%;
-    max-height: 85%;
-    max-width: 85%;
-    background: #fff;
+    height: 85%;
+    width: 85%;
     cursor: auto;
     white-space: normal;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
   }
-  /* line 92, sass/_mixins.scss */
   .featherlight .featherlight-inner {
     display: block;
   }
-  /* line 95, sass/_mixins.scss */
   .featherlight .featherlight-close-icon {
     position: absolute;
     z-index: 9999;
-    top: 50px;
-    right: 50px;
+    top: 20px;
+    right: 20px;
     line-height: 22px;
     width: 22px;
     cursor: pointer;
     text-align: center;
     text-indent: -10000px;
-    background: url('/images/site/close.svg?1476839585') no-repeat 0 0;
+    background: url("/images/site/close.svg") no-repeat 0 0;
   }
-  /* line 107, sass/_mixins.scss */
   .featherlight .featherlight-image {
     width: 100%;
   }
-  /* line 110, sass/_mixins.scss */
   .featherlight iframe {
     border: none;
   }
 
-  /* line 114, sass/_mixins.scss */
   .featherlight-iframe .featherlight-content {
     border-bottom: 0;
     padding: 0;
@@ -76,7 +69,6 @@
 }
 /* Grid
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 7, sass/store.sass */
 .container {
   position: relative;
   width: 100%;
@@ -86,7 +78,6 @@
   box-sizing: border-box;
 }
 
-/* line 15, sass/store.sass */
 .column, .columns {
   width: 100%;
   float: left;
@@ -95,7 +86,6 @@
 
 /* For devices larger than 400px */
 @media (min-width: 400px) {
-  /* line 22, sass/store.sass */
   .container {
     width: 85%;
     padding: 0;
@@ -103,164 +93,132 @@
 }
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-  /* line 28, sass/store.sass */
   .container {
     width: 80%;
   }
 
-  /* line 30, sass/store.sass */
   .column, .columns {
     margin-left: 4%;
   }
 
-  /* line 32, sass/store.sass */
   .column:first-child, .columns:first-child {
     margin-left: 0;
   }
 
-  /* line 35, sass/store.sass */
   .one.column, .one.columns {
     width: 4.66667%;
   }
 
-  /* line 37, sass/store.sass */
   .two.columns {
     width: 13.33333%;
   }
 
-  /* line 39, sass/store.sass */
   .three.columns {
     width: 22%;
   }
 
-  /* line 41, sass/store.sass */
   .four.columns {
     width: 30.66667%;
   }
 
-  /* line 43, sass/store.sass */
   .five.columns {
     width: 39.33333%;
   }
 
-  /* line 45, sass/store.sass */
   .six.columns {
     width: 48%;
   }
 
-  /* line 47, sass/store.sass */
   .seven.columns {
     width: 56.66667%;
   }
 
-  /* line 49, sass/store.sass */
   .eight.columns {
     width: 65.33333%;
   }
 
-  /* line 51, sass/store.sass */
   .nine.columns {
     width: 74%;
   }
 
-  /* line 53, sass/store.sass */
   .ten.columns {
     width: 82.66667%;
   }
 
-  /* line 55, sass/store.sass */
   .eleven.columns {
     width: 91.33333%;
   }
 
-  /* line 57, sass/store.sass */
   .twelve.columns {
     width: 100%;
     margin-left: 0;
   }
 
-  /* line 60, sass/store.sass */
   .one-third.column {
     width: 30.66667%;
   }
 
-  /* line 62, sass/store.sass */
   .two-thirds.column {
     width: 65.33333%;
   }
 
-  /* line 64, sass/store.sass */
   .one-half.column {
     width: 48%;
   }
 
   /* Offsets */
-  /* line 68, sass/store.sass */
   .offset-by-one.column, .offset-by-one.columns {
     margin-left: 8.66667%;
   }
 
-  /* line 71, sass/store.sass */
   .offset-by-two.column, .offset-by-two.columns {
     margin-left: 17.33333%;
   }
 
-  /* line 74, sass/store.sass */
   .offset-by-three.column, .offset-by-three.columns {
     margin-left: 26%;
   }
 
-  /* line 77, sass/store.sass */
   .offset-by-four.column, .offset-by-four.columns {
     margin-left: 34.66667%;
   }
 
-  /* line 80, sass/store.sass */
   .offset-by-five.column, .offset-by-five.columns {
     margin-left: 43.33333%;
   }
 
-  /* line 83, sass/store.sass */
   .offset-by-six.column, .offset-by-six.columns {
     margin-left: 52%;
   }
 
-  /* line 86, sass/store.sass */
   .offset-by-seven.column, .offset-by-seven.columns {
     margin-left: 60.66667%;
   }
 
-  /* line 89, sass/store.sass */
   .offset-by-eight.column, .offset-by-eight.columns {
     margin-left: 69.33333%;
   }
 
-  /* line 92, sass/store.sass */
   .offset-by-nine.column, .offset-by-nine.columns {
     margin-left: 78%;
   }
 
-  /* line 95, sass/store.sass */
   .offset-by-ten.column, .offset-by-ten.columns {
     margin-left: 86.66667%;
   }
 
-  /* line 98, sass/store.sass */
   .offset-by-eleven.column, .offset-by-eleven.columns {
     margin-left: 95.33333%;
   }
 
-  /* line 101, sass/store.sass */
   .offset-by-one-third.column, .offset-by-one-third.columns {
     margin-left: 34.66667%;
   }
 
-  /* line 104, sass/store.sass */
   .offset-by-two-thirds.column, .offset-by-two-thirds.columns {
     margin-left: 69.33333%;
   }
 
-  /* line 107, sass/store.sass */
   .offset-by-one-half.column, .offset-by-one-half.columns {
     margin-left: 52%;
   }
@@ -269,57 +227,47 @@
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Typography
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 116, sass/store.sass */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 25px;
   font-weight: 300;
 }
 
-/* line 121, sass/store.sass */
 h1 {
   font-size: 28px;
 }
 
-/* line 124, sass/store.sass */
 h2 {
   font-size: 24px;
 }
 
-/* line 127, sass/store.sass */
 h3 {
   font-size: 22px;
 }
 
-/* line 130, sass/store.sass */
 h4 {
   font-size: 18px;
 }
 
-/* line 133, sass/store.sass */
 h5 {
   font-size: 14px;
 }
 
-/* line 136, sass/store.sass */
 h6 {
   font-size: 12px;
 }
 
 /* Larger than phablet */
-/* line 154, sass/store.sass */
 p {
   margin-top: 0;
 }
 
 /* Links
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 160, sass/store.sass */
 a {
   color: #ED8F17;
   text-decoration: none;
 }
-/* line 163, sass/store.sass */
 a:hover {
   color: rgba(237, 143, 23, 0.8);
   text-decoration: none;
@@ -327,7 +275,6 @@ a:hover {
 
 /* Buttons
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 170, sass/store.sass */
 .button, button {
   display: inline-block;
   vertical-align: top;
@@ -349,7 +296,6 @@ a:hover {
   box-sizing: border-box;
 }
 
-/* line 192, sass/store.sass */
 input[type="submit"], input[type="reset"], input[type="button"] {
   display: inline-block;
   vertical-align: top;
@@ -370,82 +316,70 @@ input[type="submit"], input[type="reset"], input[type="button"] {
   box-sizing: border-box;
 }
 
-/* line 212, sass/store.sass */
 .button .fa, button .fa {
   font-size: 16px;
 }
 
-/* line 215, sass/store.sass */
 .button:hover, button:hover {
   color: #333;
   border-color: #888;
   outline: 0;
 }
 
-/* line 221, sass/store.sass */
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {
   color: #333;
   border-color: #888;
   outline: 0;
 }
 
-/* line 226, sass/store.sass */
 .button:focus, button:focus {
   color: #333;
   border-color: #888;
   outline: 0;
 }
 
-/* line 232, sass/store.sass */
 input[type="submit"]:focus, input[type="reset"]:focus, input[type="button"]:focus {
   color: #333;
   border-color: #888;
   outline: 0;
 }
 
-/* line 237, sass/store.sass */
 .button.button-primary, button.button-primary {
   color: #FFF;
   background-color: #ED8F17;
   border-color: #ED8F17;
 }
 
-/* line 243, sass/store.sass */
 input[type="submit"].button-primary, input[type="reset"].button-primary, input[type="button"].button-primary {
   color: #FFF;
   background-color: #ED8F17;
   border-color: #ED8F17;
 }
 
-/* line 248, sass/store.sass */
 .button.button-primary:hover, button.button-primary:hover {
   color: #FFF;
   background-color: #ED8F17;
   border-color: #ED8F17;
 }
 
-/* line 254, sass/store.sass */
 input[type="submit"].button-primary:hover, input[type="reset"].button-primary:hover, input[type="button"].button-primary:hover {
   color: #FFF;
   background-color: #ED8F17;
   border-color: #ED8F17;
 }
 
-/* line 259, sass/store.sass */
 .button.button-primary:focus, button.button-primary:focus {
   color: #FFF;
   background-color: #ED8F17;
   border-color: #ED8F17;
 }
 
-/* line 265, sass/store.sass */
 input[type="submit"].button-primary:focus, input[type="reset"].button-primary:focus, input[type="button"].button-primary:focus {
   color: #FFF;
   background-color: #ED8F17;
   border-color: #ED8F17;
 }
 
-/* line 270, sass/store.sass */
 .button.link {
   display: inline;
   border: none;
@@ -462,12 +396,10 @@ input[type="submit"].button-primary:focus, input[type="reset"].button-primary:fo
 
 /* Forms
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 286, sass/store.sass */
 label, input, button, textarea, select {
   font-family: "Source Sans Pro", sans-serif;
 }
 
-/* line 290, sass/store.sass */
 input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"] {
   height: 38px;
   padding: 6px 10px;
@@ -479,7 +411,6 @@ input[type="email"], input[type="number"], input[type="search"], input[type="tex
   box-sizing: border-box;
 }
 
-/* line 300, sass/store.sass */
 textarea, select {
   height: 38px;
   padding: 6px 10px;
@@ -492,14 +423,12 @@ textarea, select {
 }
 
 /* Removes awkward default styles on some inputs for iOS */
-/* line 313, sass/store.sass */
 input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 }
 
-/* line 318, sass/store.sass */
 textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -509,41 +438,34 @@ textarea {
   padding-bottom: 6px;
 }
 
-/* line 327, sass/store.sass */
 input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus {
   border: 1px solid #ED8F17;
   outline: 0;
 }
 
-/* line 331, sass/store.sass */
 textarea:focus, select:focus {
   border: 1px solid #ED8F17;
   outline: 0;
 }
 
-/* line 335, sass/store.sass */
 label, legend {
   display: block;
   margin-bottom: 0.5rem;
   font-weight: 600;
 }
-/* line 339, sass/store.sass */
 label:only-of-type, legend:only-of-type {
   margin-bottom: 0;
 }
 
-/* line 342, sass/store.sass */
 fieldset {
   padding: 0;
   border-width: 0;
 }
 
-/* line 347, sass/store.sass */
 input[type="checkbox"], input[type="radio"] {
   display: inline;
 }
 
-/* line 350, sass/store.sass */
 label > .label-body {
   display: inline-block;
   margin-left: 0.5rem;
@@ -552,43 +474,36 @@ label > .label-body {
 
 /* Lists
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 358, sass/store.sass */
 ul {
   list-style: circle inside;
 }
 
-/* line 361, sass/store.sass */
 ol {
   list-style: decimal inside;
   padding-left: 0;
   margin-top: 0;
 }
 
-/* line 366, sass/store.sass */
 ul {
   padding-left: 0;
   margin-top: 0;
 }
-/* line 369, sass/store.sass */
 ul ul, ul ol {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%;
 }
 
-/* line 374, sass/store.sass */
 ol ol, ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%;
 }
 
-/* line 378, sass/store.sass */
 li {
   margin-bottom: 0.5rem;
 }
 
 /* Code
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 384, sass/store.sass */
 code {
   padding: 0.2rem 0.5rem;
   margin: 0 0.2rem;
@@ -599,7 +514,6 @@ code {
   border-radius: 4px;
 }
 
-/* line 393, sass/store.sass */
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
@@ -608,67 +522,56 @@ pre > code {
 
 /* Tables
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 401, sass/store.sass */
 th, td {
   padding: 12px 15px;
   text-align: left;
   border-bottom: 1px solid #E1E1E1;
 }
 
-/* line 406, sass/store.sass */
 th:first-child, td:first-child {
   padding-left: 0;
 }
 
-/* line 409, sass/store.sass */
 th:last-child, td:last-child {
   padding-right: 0;
 }
 
 /* Spacing
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 415, sass/store.sass */
 button, .button {
   margin-bottom: 1rem;
 }
 
-/* line 418, sass/store.sass */
 input, textarea, select, fieldset {
   margin-bottom: 1.5rem;
 }
 
-/* line 421, sass/store.sass */
 pre, blockquote, dl, figure, table, p, ul, ol, form {
   margin-bottom: 2.5rem;
 }
 
 /* Utilities
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 427, sass/store.sass */
 .u-full-width {
   width: 100%;
   box-sizing: border-box;
 }
 
-/* line 431, sass/store.sass */
 .u-max-full-width {
   max-width: 100%;
   box-sizing: border-box;
 }
 
-/* line 435, sass/store.sass */
 .u-pull-right {
   float: right;
 }
 
-/* line 438, sass/store.sass */
 .u-pull-left {
   float: left;
 }
 
 /* Misc
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 444, sass/store.sass */
 hr {
   margin-top: 3rem;
   margin-bottom: 3.5rem;
@@ -679,7 +582,6 @@ hr {
 /* Clearing
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Self Clearing Goodness */
-/* line 455, sass/store.sass */
 .container:after, .row:after, .u-cf {
   content: "";
   display: table;
@@ -688,19 +590,16 @@ hr {
 
 /* Helpers
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 463, sass/store.sass */
 .rounded {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
 
-/* line 468, sass/store.sass */
 .right {
   float: right;
 }
 
-/* line 471, sass/store.sass */
 .text-right {
   text-align: right;
 }
@@ -714,46 +613,37 @@ hr {
 /* Larger than Desktop HD */
 /* Steps
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 495, sass/store.sass */
 .steps {
   margin-bottom: 40px;
 }
-/* line 497, sass/store.sass */
 .steps ul {
   display: flex;
   display: -webkit-flex;
   margin-bottom: 0;
 }
-/* line 501, sass/store.sass */
 .steps ul li {
   list-style: none;
   display: block;
   flex: 1;
   color: #aaa;
 }
-/* line 506, sass/store.sass */
 .steps ul li a {
   color: #aaa;
 }
-/* line 508, sass/store.sass */
 .steps ul li.done {
   color: #B24629;
   opacity: 0.5;
 }
-/* line 511, sass/store.sass */
 .steps ul li.done a {
   color: #B24629;
 }
-/* line 513, sass/store.sass */
 .steps ul li.sel {
   color: #B24629;
   opacity: 1;
 }
-/* line 516, sass/store.sass */
 .steps ul li.sel a {
   color: #B24629;
 }
-/* line 518, sass/store.sass */
 .steps .meter {
   height: 10px;
   position: relative;
@@ -764,7 +654,6 @@ hr {
   padding: 3px;
   margin-bottom: 10px;
 }
-/* line 527, sass/store.sass */
 .steps .meter > span {
   display: block;
   height: 100%;
@@ -778,40 +667,33 @@ hr {
 }
 
 @media (max-width: 750px) {
-  /* line 540, sass/store.sass */
   .steps ul {
     display: block;
     margin-left: 24px;
   }
-  /* line 543, sass/store.sass */
   .steps ul li {
     list-style: decimal;
     display: list-item;
   }
-  /* line 546, sass/store.sass */
   .steps .meter {
     display: none;
   }
 }
 /* Commerce Design
  *–––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 552, sass/store.sass */
 #main {
   margin-top: 25px;
 }
 
-/* line 555, sass/store.sass */
 img.product {
   width: 100%;
 }
 
-/* line 558, sass/store.sass */
 .flash {
   color: #ED8F17;
   margin-bottom: 10px;
 }
 
-/* line 562, sass/store.sass */
 .flash-bar {
   background-color: #ED8F17;
   height: 35px;
@@ -823,27 +705,22 @@ img.product {
   font-size: 19px;
   text-transform: uppercase;
 }
-/* line 572, sass/store.sass */
 .flash-bar span {
   margin-right: 10px;
 }
-/* line 574, sass/store.sass */
 #commerce #content .container .flash-bar {
   position: relative;
   bottom: 30px;
   margin-top: 0;
 }
 
-/* line 580, sass/store.sass */
 .has-error input {
   border: 1px solid #ED8F17;
 }
-/* line 582, sass/store.sass */
 .has-error .help-block {
   color: #ED8F17;
 }
 
-/* line 585, sass/store.sass */
 .address-select {
   background: #fff;
   border: 1px solid #eee;
@@ -851,78 +728,67 @@ img.product {
   position: relative;
   border-radius: 4px;
 }
-/* line 591, sass/store.sass */
 .address-select .radio {
   padding: 14px 15px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 592, sass/store.sass */
 .address-select .radio input {
   margin: 0 5px 0 0;
   position: relative;
   top: -1px;
 }
-/* line 600, sass/store.sass */
 .address-select ul.address-data {
   display: inline;
 }
-/* line 602, sass/store.sass */
 .address-select ul.address-data li {
   display: inline;
   display: inline;
 }
-/* line 605, sass/store.sass */
 .address-select ul.address-data li strong {
   display: none;
 }
-/* line 608, sass/store.sass */
 .address-select ul.address-data li span[data-key=firstName], .address-select ul.address-data li span[data-key=lastName] {
   font-weight: bold;
 }
-/* line 610, sass/store.sass */
 .address-select .actions {
   float: right;
   padding: 14px 15px;
   font-size: 0.9em;
 }
-/* line 614, sass/store.sass */
 .address-select .actions ul {
   margin: 0;
 }
-/* line 616, sass/store.sass */
 .address-select .actions ul li {
   display: inline-block;
   margin: 0 0 0 1em;
 }
-/* line 619, sass/store.sass */
 .address-select .actions ul li a {
   color: #999;
   text-decoration: underline;
 }
-/* line 622, sass/store.sass */
 .address-select .body {
   padding: 14px;
 }
 
-/* line 625, sass/store.sass */
 .hidden {
   display: none;
 }
 
-/* line 628, sass/store.sass */
+.no-items {
+  text-align: center;
+}
+
 .product.row {
   border-bottom: 1px solid #fafafa;
   margin-bottom: 2.5rem;
 }
 
-/* line 632, sass/store.sass */
 .product-details {
   padding-top: 2rem;
 }
 
-/* line 635, sass/store.sass */
 .address-card {
   background-color: transparent;
   border-radius: 5px;
@@ -931,23 +797,19 @@ img.product {
   margin-bottom: 15px;
   position: relative;
 }
-/* line 642, sass/store.sass */
 .address-card form {
   display: inline;
   margin: 0px;
 }
-/* line 645, sass/store.sass */
 .address-card .edit {
   position: absolute;
   top: 20px;
   right: 20px;
 }
-/* line 649, sass/store.sass */
 .address-card ul {
   list-style: none;
 }
 
-/* line 652, sass/store.sass */
 .shipping-select {
   background: #fff;
   border: 1px solid #eee;
@@ -955,15 +817,12 @@ img.product {
   position: relative;
   border-radius: 4px;
 }
-/* line 658, sass/store.sass */
 .shipping-select input {
   margin: 0 5px 0 0;
 }
-/* line 660, sass/store.sass */
 .shipping-select label {
   padding: 10px 14px;
 }
-/* line 662, sass/store.sass */
 .shipping-select .price {
   float: right;
   padding: 4px 4px;
@@ -971,7 +830,6 @@ img.product {
   font-weight: normal;
 }
 
-/* line 668, sass/store.sass */
 .review-card {
   background-color: transparent;
   border-radius: 5px;
@@ -980,12 +838,10 @@ img.product {
   margin-bottom: 15px;
   position: relative;
 }
-/* line 675, sass/store.sass */
 .review-card ul {
   list-style: none;
   margin: 0;
 }
-/* line 678, sass/store.sass */
 .review-card ul li {
   border-top: 1px solid #E1E1E1;
   padding: 10px 0;
