--- a/craft/templates/_layouts/_layout.html
+++ b/craft/templates/_layouts/_layout.html
@@ -9,7 +9,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
+
   <link rel="home" href="{{ siteUrl }}" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
@@ -45,6 +48,7 @@
   {% include 'partials/header.html' %}
 
   <!-- Inherited Main Content -->
+  {% if craft.request.getSegment(1) %}
   <main id="content" role="main">
     <div class="container">
       {% block content %}
@@ -52,6 +56,7 @@
       {% endblock %}
     </div>
   </main>
+  {% endif %}
 
   <!-- Age/Shipping Confirmation -->
   {% include 'partials/confirmation_modal.html' %}
